Simplified empty line check for java